Add role for configuring users
List ansible-role-users under requirements.yml to support adding user
accounts. No user accounts are added by default - this is left up to the
users of this repo.

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,8 @@
 - src: https://github.com/CSCfi/ansible-role-bastion-host.git
   scm: git
   path: roles
+
+- src: https://github.com/CSCfi/ansible-role-users.git
+  scm: git
+  path: roles
+  version: v1.7.5
